Set checkbox checked state if we didn't restore it (instead of if we didn't restore anything at all).  Bug 259486, r+sr=jst